--- a/playground.html
+++ b/playground.html
@@ -3,19 +3,117 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="learnJs.js"></script>
     <script>
 
-        function getCost(price, count) {
-          count = count || 1;
-          return price * count;
+      var friends = [
+        {
+          name: 'Сэм',
+          gender: 'Мужской',
+          email: 'luisazamora@example.com',
+          favoriteFruit: 'Картофель'
+        },
+        {
+          name: 'Эмили',
+          gender: 'Женский',
+          email: 'example@example.com',
+          favoriteFruit: 'Яблоко'
+        },
+        {
+          name: 'Мэт',
+          gender: 'Мужской',
+          email: 'danamcgee@example.com',
+          favoriteFruit: 'Яблоко'
+        },
+        {
+          name: 'Брэд',
+          gender: 'Мужской',
+          email: 'newtonwilliams@example.com',
+          favoriteFruit: 'Банан'
+        },
+        {
+          name: 'Шерри',
+          gender: 'Женский',
+          email: 'danamcgee@example.com',
+          favoriteFruit: 'Картофель'
+        },
+        {
+          name: 'Керри',
+          gender: 'Женский',
+          email: 'danamcgee@example.com',
+          favoriteFruit: 'Апельсин'
+        },
+        {
+          name: 'Стелла',
+          gender: 'Женский',
+          email: 'waltersguzman@example.com',
+          favoriteFruit: 'Картофель'
         }
+      ];
 
-        let ss = getCost(49.99, 0);
-
-        function somethingNew(lol) {
-
+      function query(collection) {
+        // let finalCollection = [];
+        let argv = [].slice.call(arguments);
+        console.log(argv);
+        for (let i = 1; i < argv.length; i++) {
+          if (argv[i].name === 'filter') {
+            let apply = argv[i];
+            collection = apply(collection);
+          }
         }
-        //TODO : именованные аргументы – передача объекта как аргумента.
+        for (let i = 1; i < argv.length; i++) {
+          if (argv[i].name === 'select') {
+            let apply = argv[i];
+            collection = apply(collection);
+          }
+        }
+        return collection;
+      }
+
+      function select() {
+        let fields = [];
+        for (let i = 0; i < arguments.length; i++) {
+          fields[i] = arguments[i];
+        }
+        return function select(collection) {
+          let newCollection = [];
+          for (let i = 0; i < collection.length; i++) {
+            var newObj = {};
+            for (let j = 0; j < fields.length; j++) {
+              newObj[fields[j]] = collection[i][fields[j]];
+            }
+            newCollection.push(newObj);
+          }
+          return newCollection;
+        }
+      }
+
+      function filterIn(property, values) {
+        return function filter(collection) {
+          let newCollection = [];
+          for (let i = 0; i < collection.length; i++) {
+            let newObj = {};
+            for (let j = 0; j < values.length; j++) {
+              if (collection[i][property] === values[j]) {
+                newObj = collection[i];
+                newCollection.push(newObj);
+              }
+            }
+          }
+          return newCollection;
+        }
+      }
+
+      var bestFriends = query(
+          friends,
+          select('name', 'gender', 'email'),
+          filterIn('favoriteFruit', ['Яблоко', 'Картофель'])
+      );
+
+      console.info(bestFriends);
+      // var kkk = select('name', 'email');
+      // console.log(kkk(friends));
+      //TODO : именованные аргументы – передача объекта как аргумента.
         //
       // function User(fullName) {
       //   this.fullName = fullName;
